src/snapshots/rustic_rs__config__tests__default_config_display_passes.snap
---
source: src/config.rs
expression: config
---
[global]
profile-substitute-env = false
use-profiles = []
dry-run = false
dry-run-warmup = false
check-index = false
no-progress = false
json-progress = false
show-time-offset = false

[global.hooks]
run-before = []
run-after = []
run-failed = []
run-finally = []

[global.env]

[global.metrics-labels]

[repository]
no-cache = false
warm-up = false

[repository.options]

[repository.options-hot]

[repository.options-cold]

[repository.hooks]
run-before = []
run-after = []
run-failed = []
run-finally = []

[init]

[snapshot-filter]
filter-hosts = []
filter-labels = []
filter-paths = []
filter-paths-exact = []
filter-tags = []
filter-tags-exact = []

[backup]
no-scan = false
strict = false
json = false
long = false
init = false
parents = []
skip-if-unchanged = false
force = false
ignore-ctime = false
ignore-inode = false
globs = []
iglobs = []
glob-files = []
iglob-files = []
git-ignore = false
no-require-git = false
custom-ignorefiles = []
exclude-if-present = []
exclude-if-xattr = []
one-file-system = false
tags = []
delete-never = false
snapshots = []
sources = []

[backup.hooks]
run-before = []
run-after = []
run-failed = []
run-finally = []

[backup.options]

[backup.metrics-labels]

[copy]
targets = []

[forget]
prune = false
filter-hosts = []
filter-labels = []
filter-paths = []
filter-paths-exact = []
filter-tags = []
filter-tags-exact = []

[webdav]
symlinks = false
